--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "node-fetch": ">=2.6.1 <=2.9.9",
     "node-telegram-bot-api": "^0.58.0"
+    "amazon-advertising-api": "^1.0.5"
+
   },
   "devDependencies": {
     "eslint": "^8.19.0",
