--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "node-fetch": ">=2.6.1 <=2.9.9",
-    "node-telegram-bot-api": "^0.58.0"
+    "node-telegram-bot-api": "^0.58.0",
     "amazon-advertising-api": "^1.0.5"
 
   },
